# ndev

./: .gitignore  README.md  pyproject.toml  todo.txt
args/: 5.6.txt  7.0.txt
ndev/: __main__.py  cli.py  config.py  constants.py  github.py  logger.py  manifest.py  utils.py
ndev/chroot/: manager.py  packages.py  shell.py
ndev/commands/: available.py  clean.py  ctl.py  current.py  db.py  doctor.py  grok.py  install.py  list.py  logs.py  pma.py  reload.py  restart.py  setup.py  start.py  status.py  stop.py  uninstall.py  update.py  use.py  vhost.py
ndev/php/: builder.py  downloader.py  extensions.py  installer.py  resolver.py  templates.py
ndev/runtime/: fpm.py  process.py  sockets.py
patches/5.6/: dom_document.patch  libxml.patch  openssl.patch  php_libxml_h.patch  scanf.patch  soap_sdl.patch
patches/7.4/: dom_document.patch  libxml.patch  openssl.patch  php_libxml_h.patch  scanf.patch  soap_sdl.patch
patches/8.0/: dom_document.patch  libxml.patch  openssl.patch  php_libxml_h.patch  scanf.patch  soap_sdl.patch
patches/8.1/: libxml.patch  openssl.patch
patches/8.2/: libxml.patch
patches/8.3/: libxml.patch
patches/8.4/: libxml.patch  memfd_create.patch
patches/8.5/: libxml.patch
templates/: php-fpm.conf  php.ini  www.conf
