[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ndev"
version = "0.1.0"
description = "A CLI tool to compile, install, and manage isolated PHP-FPM versions on Debian"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Antigravity Dev Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "filelock>=3.12.0",
    "packaging>=23.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ndev = "ndev.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["ndev*"]
